added logo and sharable links

--- a/client/index.html
+++ b/client/index.html
@@ -1,9 +1,30 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Future Insights</title>
+    <link rel="icon" href="/logo.png" type="image/png" />
+
+    <!-- Open Graph Meta Tags (for Facebook, LinkedIn, etc.) -->
+    <meta property="og:title" content="Future Insights" />
+    <meta
+      property="og:description"
+      content="Through a combination of cutting-edge insights, interactive training, and hands-on coaching, we partner with executives and organizations to build stronger leadership, maximize performance, and unlock future growth opportunities."
+    />
+    <meta property="og:image" content="/logo.png" />
+    <meta property="og:url" content="https://futureinsights.ae" />
+    <meta property="og:type" content="website" />
+
+    <!-- Twitter Meta Tags -->
+    <meta name="twitter:title" content="Future Insights" />
+    <meta
+      name="twitter:description"
+      content="Through a combination of cutting-edge insights, interactive training, and hands-on coaching, we partner with executives and organizations to build stronger leadership, maximize performance, and unlock future growth opportunities."
+    />
+    <meta name="twitter:image" content="/logo.png" />
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta name="twitter:site" content="@yourtwitterhandle" />
   </head>
   <body>
     <div id="root"></div>
