--- a/client/index.html
+++ b/client/index.html
@@ -12,7 +12,7 @@
       property="og:description"
       content="Through a combination of cutting-edge insights, interactive training, and hands-on coaching, we partner with executives and organizations to build stronger leadership, maximize performance, and unlock future growth opportunities."
     />
-    <meta property="og:image" content="/logo.png" />
+    <meta property="og:image" content="/logo_dark.png" />
     <meta property="og:url" content="https://futureinsights.ae" />
     <meta property="og:type" content="website" />
 
@@ -22,7 +22,7 @@
       name="twitter:description"
       content="Through a combination of cutting-edge insights, interactive training, and hands-on coaching, we partner with executives and organizations to build stronger leadership, maximize performance, and unlock future growth opportunities."
     />
-    <meta name="twitter:image" content="/logo.png" />
+    <meta name="twitter:image" content="/logo_dark.png" />
     <meta name="twitter:card" content="summary_large_image" />
     <meta name="twitter:site" content="@yourtwitterhandle" />
   </head>
