--- a/client/index.html
+++ b/client/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Future Insights</title>
-    <link rel="icon" href="/logo.png" type="image/png" />
+    <link rel="icon" href="/small.png" type="image/png" />
 
     <!-- Open Graph Meta Tags (for Facebook, LinkedIn, etc.) -->
     <meta property="og:title" content="Future Insights" />
@@ -12,7 +12,7 @@
       property="og:description"
       content="Through a combination of cutting-edge insights, interactive training, and hands-on coaching, we partner with executives and organizations to build stronger leadership, maximize performance, and unlock future growth opportunities."
     />
-    <meta property="og:image" content="/logo_dark.png" />
+    <meta property="og:image" content="/small.png" />
     <meta property="og:url" content="https://futureinsights.ae" />
     <meta property="og:type" content="website" />
 
@@ -22,7 +22,7 @@
       name="twitter:description"
       content="Through a combination of cutting-edge insights, interactive training, and hands-on coaching, we partner with executives and organizations to build stronger leadership, maximize performance, and unlock future growth opportunities."
     />
-    <meta name="twitter:image" content="/logo_dark.png" />
+    <meta name="twitter:image" content="/small.png" />
     <meta name="twitter:card" content="summary_large_image" />
     <meta name="twitter:site" content="@yourtwitterhandle" />
   </head>
