successfully tested the payment integration

--- a/ccavenue/dataForm.html
+++ b/ccavenue/dataForm.html
@@ -6,16 +6,16 @@
 <body>
     <form method="POST" action="http://localhost:5000/ccavRequestHandler">
         <input type="text" name="order_id" value="ORD12345" />
-        <input type="text" name="currency" value="INR" />
-        <input type="text" name="amount" value="500" />
+        <input type="text" name="currency" value="AED" />
+        <input type="text" name="amount" value="500.00" />
         <input type="text" name="billing_name" value="John Doe" />
         <input type="text" name="billing_email" value="john@example.com" />
         <input type="text" name="billing_tel" value="9999999999" />
         <input type="text" name="billing_address" value="123 Street" />
-        <input type="text" name="billing_city" value="Mumbai" />
-        <input type="text" name="billing_state" value="Maharashtra" />
+        <input type="text" name="billing_city" value="Dubai" />
+        <input type="text" name="billing_state" value="Dubai" />
         <input type="text" name="billing_zip" value="400001" />
-        <input type="text" name="billing_country" value="India" />
+        <input type="text" name="billing_country" value="UAE" />
         <button type="submit">Pay Now</button>
     </form>
 </body>
